# team-21-app

./: .cursorrules  .env.example  .gitignore  Makefile  PROJECT_ANALYSIS_REPORT.md  README.md  TEST_ACCOUNTS.md  docker-compose.prod.yml  docker-compose.yml  e restart backend  how --name-only b542494  project.md  tatus
backend/: Dockerfile  alembic.ini  cloudbuild.release.yaml  cloudbuild.yaml  env.local.example  mypy.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20240306_002_add_role_column.py  add_role_to_users.py  create_users_table.py
backend/migrations/: env.py
backend/migrations/versions/: 05b3400baf1d_create_users.py  0ea4d529c729_add_quest_models.py  163fd5eae337_create_all_tables.py  20240306_001_create_users.py  20240306_002_add_role_and_verified.py  20250911_001_create_behavior_records.py  442d12d640c9_create_initial_tables.py  5cc8e705b78e_add_terms_acceptance_to_users.py  83a4b42532e9_fix_class_models.py  8d0a8fa379c0_add_class_and_learning_progress_models.py  add_avatar_tables_only.py  fe4386583e86_add_chat_tables.py
backend/scripts/: create_demo_accounts.py  create_sample_avatars.py  give_default_avatar.py  seed_data.py  seed_non_cog_quests.py
backend/src/: main.py
backend/src/api/: auth.py  behavior.py  emotion_analysis.py  emotions.py  feedback.py  learning.py  users.py
backend/src/core/: security.py
backend/src/infrastructure/: database.py  kafka_consumer.py  kafka_producer.py  seed_data.py  sse_manager.py
backend/src/tests/: test_learning_api.py
backend/tests/: test_basic.py
ml/: main.py  (+2 more)
(+199 files in other folders)
